docs/4.21/rest_api/schedule_and_quota_apis/schedule-and-quota-apis-index.md
# AppliedClusterResourceQuota \[quota.openshift.io/v1\]

Description
AppliedClusterResourceQuota mirrors ClusterResourceQuota at a project scope, for projection into a project. It allows a project-admin to know which ClusterResourceQuotas are applied to his project and their associated usage.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# ClusterResourceQuota \[quota.openshift.io/v1\]

Description
ClusterResourceQuota mirrors ResourceQuota at a cluster scope. This object is easily convertible to synthetic ResourceQuota object to allow quota evaluation re-use.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# FlowSchema \[flowcontrol.apiserver.k8s.io/v1\]

Description
FlowSchema defines the schema of a group of flows. Note that a flow is made up of a set of inbound API requests with similar attributes and is identified by a pair of strings: the name of the FlowSchema and a "flow distinguisher".

Type
`object`

# LimitRange \[v1\]

Description
LimitRange sets resource usage limits for each kind of resource in a Namespace.

Type
`object`

# PriorityClass \[scheduling.k8s.io/v1\]

Description
PriorityClass defines mapping from a priority class name to the priority integer value. The value can be any valid integer.

Type
`object`

# PriorityLevelConfiguration \[flowcontrol.apiserver.k8s.io/v1\]

Description
PriorityLevelConfiguration represents the configuration of a priority level.

Type
`object`

# ResourceQuota \[v1\]

Description
ResourceQuota sets aggregate quota restrictions enforced per namespace

Type
`object`
