docs/5.0/rest_api/schedule_and_quota_apis/schedule-and-quota-apis-index.md
# AppliedClusterResourceQuota \[quota.openshift.io/v1\]

Description
AppliedClusterResourceQuota mirrors ClusterResourceQuota at a project scope, for projection into a project. It allows a project-admin to know which ClusterResourceQuotas are applied to his project and their associated usage.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# ClusterResourceQuota \[quota.openshift.io/v1\]

Description
ClusterResourceQuota mirrors ResourceQuota at a cluster scope. This object is easily convertible to synthetic ResourceQuota object to allow quota evaluation re-use.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# DeviceClass \[resource.k8s.io/v1\]

Description
DeviceClass is a vendor- or admin-provided resource that contains device configuration and selectors. It can be referenced in the device requests of a claim to apply these presets. Cluster scoped.

Type
`object`

# FlowSchema \[flowcontrol.apiserver.k8s.io/v1\]

Description
FlowSchema defines the schema of a group of flows. Note that a flow is made up of a set of inbound API requests with similar attributes and is identified by a pair of strings: the name of the FlowSchema and a "flow distinguisher".

Type
`object`

# LimitRange \[v1\]

Description
LimitRange sets resource usage limits for each kind of resource in a Namespace.

Type
`object`

# PriorityClass \[scheduling.k8s.io/v1\]

Description
PriorityClass defines mapping from a priority class name to the priority integer value. The value can be any valid integer.

Type
`object`

# PriorityLevelConfiguration \[flowcontrol.apiserver.k8s.io/v1\]

Description
PriorityLevelConfiguration represents the configuration of a priority level.

Type
`object`

# ResourceQuota \[v1\]

Description
ResourceQuota sets aggregate quota restrictions enforced per namespace

Type
`object`

# ResourceClaim \[resource.k8s.io/v1\]

Description
ResourceClaim describes a request for access to resources in the cluster, for use by workloads. For example, if a workload needs an accelerator device with specific properties, this is how that request is expressed. The status stanza tracks whether this claim has been satisfied and what specific resources have been allocated.

Type
`object`

# ResourceClaimTemplate \[resource.k8s.io/v1\]

Description
ResourceClaimTemplate is used to produce ResourceClaim objects.

Type
`object`

# ResourceSlice \[resource.k8s.io/v1\]

Description
ResourceSlice represents one or more resources in a pool of similar resources, managed by a common driver. A pool may span more than one ResourceSlice, and exactly how many ResourceSlices comprise a pool is determined by the driver.

At the moment, the only supported resources are devices with attributes and capacities. Each device in a given pool, regardless of how many ResourceSlices, must have a unique name. The ResourceSlice in which a device gets published may change over time. The unique identifier for a device is the tuple \<driver name\>, \<pool name\>, \<device name\>.

Whenever a driver needs to update a pool, it increments the pool.Spec.Pool.Generation number and updates all ResourceSlices with that new number and new resource definitions. A consumer must only use ResourceSlices with the highest generation number and ignore all others.

When allocating all resources in a pool matching certain criteria or when looking for the best solution among several different alternatives, a consumer should check the number of ResourceSlices in a pool (included in each ResourceSlice) to determine whether its view of a pool is complete and if not, should wait until the driver has completed updating the pool.

For resources that are not local to a node, the node name is not set. Instead, the driver may use a node selector to specify where the devices are available.

Type
`object`
